Fixed feedback form wrapping on IE/Edge

--- a/pupil-spa/src/app/survey-feedback/survey-feedback.component.scss
+++ b/pupil-spa/src/app/survey-feedback/survey-feedback.component.scss
@@ -7,3 +7,7 @@ label {
 fieldset {
     min-width: 0;
 }
+
+#feedback-comment {
+    max-width: 30em;
+}
